[gd_scene load_steps=5 format=3 uid="uid://brwn8rvwptlxl"]

[ext_resource type="Script" uid="uid://cfwromw4sqpok" path="res://Scenes/Microgames/MicrogameScripts/Boss/boss_enemy.gd" id="1_yye5n"]
[ext_resource type="Texture2D" uid="uid://btkyk4spm4cle" path="res://Assets/Sprites/Boss/ds.png" id="2_dqra6"]
[ext_resource type="PackedScene" uid="uid://e45j3sla8vlo" path="res://Scenes/Microgames/MicrogameScripts/Boss/laser_beam.tscn" id="3_dqra6"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_y43md"]
points = PackedVector2Array(-85, 46, -215, -24, -11, -119, 110, -51)

[node name="BossEnemy" type="CharacterBody2D"]
script = ExtResource("1_yye5n")
speed = 0.8

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_dqra6")
hframes = 2
frame = 1
region_enabled = true
region_rect = Rect2(0, 0, 566, 297)

[node name="Area2D" type="Area2D" parent="." groups=["boss_hitbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(32, 88)
shape = SubResource("ConvexPolygonShape2D_y43md")

[node name="ShotWaveTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="LaserBeam" parent="." instance=ExtResource("3_dqra6")]
position = Vector2(0, 122)
target_position = Vector2(0, 1000)
cast_speed = 5000.0
max_length = 1000.0
color = Color(0.8162014, 0, 0.17449704, 1)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ShotWaveTimer" to="." method="_on_shot_wave_timer_timeout"]
